# clue-api

./: .gitignore  README.md  new-bit  pyproject.toml  yoyo.ini
.github/workflows/: test.yml
clue_api/: __init__.py  db.py  report_api.py  settings.py
clue_api/cli/: __init__.py
clue_api/db_setup/: importer.py  importer_2.py  pandas_importer.py  schema.py
clue_oda/: settings.py
clue_oda/api/: __init__.py  db.py  report_api.py
clue_oda/data/cli/: __init__.py
clue_oda/data/ops/: db.py  importer.py  importer_2.py  pandas_importer.py  schema.py
data/: gen.py  sales_data.csv  sales_data.yaml  sales_data_2.csv
data/optimised/: sales_schema.sql
data/simple/: sales_schema.sql
docs/: openapi.yaml
migrations/: 20250413_01_rjwHd.sql  20250413_02_9sO9a.sql
tests/: __init__.py  conftest.py  test_query_analyze.py  test_query_timeit.py  test_reports.py  test_test.py  ttest_query_timeit.py
tests/data/: gen.py  sales_data_medium.tgz
