[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project]
name = "clue-api"
version = "1.0.0"
description = "A test Flask API."
dependencies = [
    "flask",
    "psycopg2",
    "click",
    "SQLAlchemy",
    "PyYAML",
    "pandas",
    "waitress",
]

[project.scripts]
clue = "clue_api.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["clue_api"]
